--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,3 +30,6 @@ jobs:
 
     - name: Run the Maven verify phase
       run: mvn --batch-mode --update-snapshots verify
+
+    - name: Run test
+      run: mvn test
